Updated styles to fix the slider layout issue

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   background-color: #f1e3d3;
   font-family: "Karla", sans-serif;
@@ -9,66 +12,45 @@ p {
   text-align: center;
   margin: 1.5em;
 }
-main {
-  background-color: #99c1b9;
-  text-align: center;
-  display: block;
-  margin: 0 auto;
-  margin-top: 5em;
-  max-width: 40vw;
-  height: 20em;
-  border-radius: 6px;
-}
+
 img {
   max-width: 50px;
   margin-top: 3em;
 }
-.main-container,
-.images-container {
-  max-width: 20vw;
+
+main {
+  background-color: #99c1b9;
+  text-align: center;
   margin: 0 auto;
+  margin-top: 4em;
+  padding: 4em;
+  max-width: 40vw;
+  border-radius: 6px;
+  /* overflow: hidden; */
 }
-
-input[type="range"] {
-  -webkit-appearance: none; /* WebKit/Blink */
-  -moz-appearance: none; /* Gecko */
-  appearance: none; /* Standard */
-  /* position: absolute; */
-  background-color: #8e7dbe;
-  border-radius: 0.5em;
-  /* left: 39%; */
-  /* width: 20%; */
-  width: 55%;
-  height: 5px;
-  margin-top: 0;
+.items-container {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  height: 25vh;
 }
-
-input[type="range"]::-webkit-slider-thumb {
-  box-shadow: none;
-  -webkit-appearance: none;
-  background: transparent;
-  background-image: url("images/moon.svg");
-  width: 3em;
-  height: 3em;
-}
-
-.line {
-  min-height: 3em;
+.column {
+  text-align: center;
+  height: 32px;
+  transition: height 1s ease-in-out;
   width: 5px;
   background-color: #8e7dbe;
 }
-.lines-container,
-.images-container {
-  display: flex;
-  justify-content: space-around;
+.column img {
+  margin-top: 0.5em;
+}
+.content {
+  position: relative;
+  top: -160px;
 }
 .percent {
   margin-bottom: 0;
 }
-.images-container img {
-  margin-top: 0.5em;
-}
-
 .bubble {
   color: black;
   display: flex;
@@ -81,6 +63,26 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 5em;
   margin-top: 0.5em;
 }
+
+input[type="range"] {
+  -webkit-appearance: none; /* WebKit/Blink */
+  -moz-appearance: none; /* Gecko */
+  appearance: none; /* Standard */
+  background-color: #8e7dbe;
+  border-radius: 0.5em;
+  width: 100%;
+  height: 5px;
+  margin-top: 0;
+}
+input[type="range"]::-webkit-slider-thumb {
+  box-shadow: none;
+  -webkit-appearance: none;
+  background: transparent;
+  background-image: url("images/moon.svg");
+  width: 3em;
+  height: 3em;
+}
+
 button {
   border: none;
   display: block;
